[package]
name = "twelvepool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0"
serde_json = "1.0"
futures = "0.3"
sha2 = "0.9"
base64 = "0.13"
log = "0.4"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "*"
