[package]
name = "twelvepool"
version = "0.3.0"
authors = ["Etienne Napoleone <etienne.napoleone@gmail.com>"]
edition = "2021"
description = "Watch for new txs in a Terra node mempool"
documentation = "https://github.com/setten-io/twelvepool/blob/main/README.md"
readme = "README.md"
homepage = "https://github.com/setten-io/twelvepool"
repository = "https://github.com/setten-io/twelvepool"
license = "GPL-3.0-or-later"
keywords = ["blockchain", "terra", "mempool", "cosmos", "tendermint"]
categories = ["asynchronous", "cryptography::cryptocurrencies"]

[dependencies]
maplit = "1.0"
serde_json = "1.0"
futures = "0.3"
sha2 = "0.9"
base64 = "0.13"
log = "0.4"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
